[package]
name = "solana-ecies"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]
name = "solana_ecies"

[dependencies]
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
curve25519-dalek = "4.1.3"
aes-gcm = "0.10.3"
hkdf = "0.12.4"
sha2 = "0.10.8"
solana-sdk = "2.0.0"
rand = "0.9.1"
ed25519-dalek = "2.1.1"
