[package]
name = "solana-ecies"
version = "0.1.1"
edition = "2021"
description = "ECIES encryption for Solana keypairs using X25519, AES-256-GCM, and HKDF"
license = "MIT"
repository = "https://github.com/pupplecat/solana-ecies"
keywords = ["solana", "ecies", "encryption", "x25519", "crypto"]
categories = ["cryptography"]
readme = "README.md"
license-file = "LICENSE"

[lib]
crate-type = ["lib"]
name = "solana_ecies"

[dependencies]
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
curve25519-dalek = "4.1.3"
aes-gcm = "0.10.3"
hkdf = "0.12.4"
sha2 = "0.10.8"
solana-sdk = "2.0.0"
rand = "0.9.1"
ed25519-dalek = "2.1.1"
